--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="T9">
 <head>
 	<title>T9</title>
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
+	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css"/>
 </head>
-<body>
+<body ng-controller="T9Ctrl">
 	<h1>HI!</h1>
+
+	<md-content>
+		<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+			<md-button class="md-raised">1</md-button>
+			<md-button class="md-raised">2</md-button>
+			<md-button class="md-raised">3</md-button>
+		</section>
+	</md-content>
+
+	<!-- Angular Materail Dependencies -->
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/angular-aria/angular-aria.js"></script>
+	<script src="bower_components/angular-material/angular-material.js"></script>
+
+	<script type="script.js"></script>
+	<script src="http://localhost:8080/livereload.js"></script>
 </body>
 </html>
