fixing the typo in script tag

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="T9">
+<html ng-app="T9App">
 <head>
 	<title>T9</title>
 	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css"/>
 </head>
 <body ng-controller="T9Ctrl">
-	<h1>HI!</h1>
+	<h1>{{name}}</h1>
 
 	<md-content>
 		<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
@@ -21,7 +21,7 @@
 	<script src="bower_components/angular-aria/angular-aria.js"></script>
 	<script src="bower_components/angular-material/angular-material.js"></script>
 
-	<script type="script.js"></script>
-	<script src="http://localhost:8080/livereload.js"></script>
+	<script src="script.js"></script>
+
 </body>
 </html>
