--- a/index.html
+++ b/index.html
@@ -10,19 +10,46 @@
 	<md-content>
 		<section layout="column" layout-align="center center" layout-wrap>
 			<section layout="row" layout-align="center center" layout-wrap>
-				<md-button class="md-raised">1 .?!</md-button>
-				<md-button class="md-raised">2 ABC</md-button>
-				<md-button class="md-raised">3 DEF</md-button>
+				<md-button class="md-raised">
+					<span class="num">1</span>
+					<span>.?!</span>
+				</md-button>
+				<md-button class="md-raised">
+					<span class="num">2</span>
+					<span>ABC</span>
+				 </md-button>
+				<md-button class="md-raised">
+					<span class="num">3</span>
+					<span>DEF</span>
+				</md-button>
 			</section>
 			<section layout="row" layout-align="center center" layout-wrap>
-				<md-button class="md-raised">4 GHI</md-button>
-				<md-button class="md-raised">5 JKL</md-button>
-				<md-button class="md-raised">6 MNO</md-button>
+				<md-button class="md-raised">
+					<span class="num">4</span>
+					<span>GHI</span>
+				</md-button>
+				<md-button class="md-raised">
+					<span class="num">5</span>
+					<span>JKL</span>
+				</md-button>
+				<md-button class="md-raised">
+					<span class="num">6</span>
+					<span>MNO</span>
+				</md-button>
 			</section>
 			<section layout="row" layout-align="center center" layout-wrap>
-				<md-button class="md-raised">7 PQRS</md-button>
-				<md-button class="md-raised">8 TUV</md-button>
-				<md-button class="md-raised">9 WXYZ</md-button>
+				<md-button class="md-raised">
+					<span class="num">7</span>
+					<span>PQRS</span>
+				</md-button>
+				<md-button class="md-raised">
+					<span class="num">8</span>
+					<span>TUV</span>
+				</md-button>
+				<md-button class="md-raised">
+					<span class="num">9</span>
+					<span>WXYZ</span>
+				</md-button>
 			</section>
 			<section layout="row" layout-align="center center" layout-wrap>
 				<md-button class="md-raised">*</md-button>
