fixed the problem with LESS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>T9</title>
 	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css"/>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Old+Standard+TT' rel='stylesheet' type='text/css'>
 </head>
 <body ng-controller="T9Ctrl">
